--- a/form.ui
+++ b/form.ui
@@ -695,7 +695,7 @@ QScrollBar::sub-page:vertical
   <widget class="QPushButton" name="setButton">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>90</x>
      <y>260</y>
      <width>80</width>
      <height>24</height>
@@ -745,24 +745,43 @@ color: rgb(255, 255, 255);
 border-color: rgb(255, 156, 43);</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="removeButton">
+  <widget class="QWidget" name="horizontalLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>400</x>
+     <x>370</x>
      <y>310</y>
-     <width>80</width>
-     <height>24</height>
+     <width>160</width>
+     <height>71</height>
     </rect>
    </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton#removeButton:hover {
+   <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <item>
+     <widget class="QPushButton" name="stopButton">
+      <property name="styleSheet">
+       <string notr="true">QPushButton#removeButton:hover {
 		
 	background-color: rgb(255, 255, 255);
  }</string>
-   </property>
-   <property name="text">
-    <string>Remove</string>
-   </property>
+      </property>
+      <property name="text">
+       <string>STOP</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="removeButton">
+      <property name="styleSheet">
+       <string notr="true">QPushButton#removeButton:hover {
+		
+	background-color: rgb(255, 255, 255);
+ }</string>
+      </property>
+      <property name="text">
+       <string>Remove</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
